# street-view-archetypes

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
configs/: categories.yaml  pipeline.example.yaml  pipeline.local-images.yaml
configs/templates/: local-arterial-midblock.template.yaml  local-run.template.yaml
data/examples/: review_manifest.template.csv
data/examples/boundaries/: demo_city.geojson  demo_county.geojson
docs/: implementation-plan.md  methodology.md
src/street_view_archetypes/: cli.py  config.py  models.py  pipeline.py
src/street_view_archetypes/boundaries/: loaders.py
src/street_view_archetypes/classification/: rules.py
src/street_view_archetypes/imagery/: google_street_view.py
src/street_view_archetypes/reporting/: writer.py
src/street_view_archetypes/review/: server.py
src/street_view_archetypes/sampling/: grid.py  roads.py
src/street_view_archetypes/studies/: init.py
src/street_view_archetypes/summarization/: archetypes.py
src/street_view_archetypes/synthetic/: prompts.py
src/street_view_archetypes/utils/: io.py
